READ Administrador info - progreso Total 50%

--- a/vistas/privado/detalles_usuario.html
+++ b/vistas/privado/detalles_usuario.html
@@ -103,40 +103,36 @@
                 </div>
                 <!--Contenedor del formulario para cambiar-->
                 <div class="contenedorForm d-flex flex-column">
-                    <form class="row needs-validation form1 position-relative" novalidate>
+                    <form class="row needs-validation form1 position-relative" novalidate >
                         <!--Formulario de nombre-->
                         <div class="col-md-6">
                             <label for="nombreInput" class="form-label">Nombres</label>
-                            <input type="text" class="form-control" id="nombreInput" required readonly value="Emiliano">
+                            <input type="text" class="form-control" id="nombreInput" required readonly>
                         </div>
                         <!--Formulario de apellido-->
                         <div class="col-md-6">
                             <label for="apellidosInput" class="form-label ">Apellidos</label>
-                            <input type="text" class="form-control" id="apellidosInput" required readonly
-                                value="Hernandéz">
+                            <input type="text" class="form-control" id="apellidosInput" required readonly>
                         </div>
                         <!--Formulario de DUI-->
                         <div class="col-md-6 mt-3">
                             <label for="duiInput" class="form-label ">DUI</label>
-                            <input type="text" class="form-control" id="duiInput" required readonly value="12345678-9">
+                            <input type="text" class="form-control" id="duiInput" required readonly>
                         </div>
                         <!--Formulario de telefono-->
                         <div class="col-md-6 mt-3">
                             <label for="telefonoInput" class="form-label ">Teléfono</label>
-                            <input type="text" class="form-control" id="telefonoInput" required readonly
-                                value="1234-5678">
+                            <input type="text" class="form-control" id="telefonoInput" required readonly>
                         </div>
                         <!--Formulario de correo electronico-->
                         <div class="col-md-6 mt-3">
                             <label for="correoInput" class="form-label ">Correo Electrónico</label>
-                            <input type="text" class="form-control" id="correoInput" required readonly
-                                value="emilianito@gmail.com.sv">
+                            <input type="text" class="form-control" id="correoInput" required readonly>
                         </div>
                         <!--Formulario de fecha de nacimento-->
                         <div class="col-md-6 mt-3">
                             <label for="fechanInput" class="form-label ">Fecha de Nacimiento</label>
-                            <input type="date" class="form-control" id="fechanInput" required readonly
-                                value="2001-07-07">
+                            <input type="date" class="form-control" id="fechanInput" required readonly>
                         </div>
                         <!--Formulario de contraseña
                         <div class="col-md-6 mt-3">
