Read Admin - Arreglo de bug

--- a/vistas/privado/detalles_usuario.html
+++ b/vistas/privado/detalles_usuario.html
@@ -91,11 +91,11 @@
                         <!-- Contenedor de información del usuario -->
                         <div class="contenedorNombre">
                             <!-- Contenedor para el nombre del usuario -->
-                            <h3 class="titillium-web-regular" id="nombreDeUsuario"> Emiliano Hernandez</h3>
+                            <h3 class="titillium-web-regular" id="nombreDeUsuario"> </h3>
                         </div>
                         <div class="contenedorCorreo position-relative">
                             <!-- Contenedor para la dirección de correo del usuario -->
-                            <h6 class="titillium-web-extralight" id="correoDeUsuario">emilianito@gmail.com.sv</h6>
+                            <h6 class="titillium-web-extralight" id="correoDeUsuario"></h6>
                             <!-- Línea decorativa debajo del correo -->
                             <div class="linea1"></div>
                         </div>
