--- a/vistas/privado/pedidos.html
+++ b/vistas/privado/pedidos.html
@@ -67,25 +67,13 @@
                                     <!-- Formulario de búsqueda -->
                                     <form class="ms-2 col-lg-10 col-md-10 col mt-3 mb-4" id="searchForm">
                                         <div class="row col-lg-12">
-                                            <div class="col-lg-10 col-md-8">
                                                 <div class="search-container me-5">
                                                     <input type="search" class="form-control" name="search"
-                                                        placeholder="Buscar....." id="buscadorInputPedidos" required>
+                                                        placeholder="Buscar....." id="buscadorInputRepartidor">
                                                     <span class="search-icon"><i class="bi bi-search"></i></span>
                                                     <span class="clear-icon" onclick="clearSearch()"><i
                                                             class="bi clear-icon"></i></span>
                                                 </div>
-                                            </div>
-                                            <div class="col-lg-2 col-md-4">
-                                                <div class="custom-select">
-                                                    <select class="form-select" aria-label="Default select example">
-                                                        <option selected>Todos</option>
-                                                        <option value="1">Entregado</option>
-                                                        <option value="2">En camino</option>
-                                                        <option value="3">Pendiente</option>
-                                                    </select>
-                                                </div>
-                                            </div>
                                         </div>
                                     </form>
                                     <!--Contenedor de cards-->
@@ -106,12 +94,12 @@
                             <div class="row g-3">
                                 <div class="col-lg-12 contenedorTotal">
                                     <!-- Formulario de búsqueda -->
-                                    <form class="ms-2 col-lg-10 col-md-10 col mt-3 mb-4" id="searchForm">
+                                    <form class="ms-2 col-lg-10 col-md-10 col mt-3 mb-4" id="searchFormPedido">
                                         <div class="row col-lg-12">
                                             <div class="col-lg-10 col-md-8">
                                                 <div class="search-container me-5">
                                                     <input type="search" class="form-control" name="search"
-                                                        placeholder="Buscar" id="buscadorInputPedidos" required>
+                                                        placeholder="Buscar" id="buscadorInputPedidos">
                                                     <span class="search-icon"><i class="bi bi-search"></i></span>
                                                     <span class="clear-icon" onclick="clearSearch()"><i
                                                             class="bi clear-icon"></i></span>
@@ -119,7 +107,7 @@
                                             </div>
                                             <div class="col-lg-2 col-md-4">
                                                 <div class="custom-select">
-                                                    <select class="form-select" aria-label="Default select example">
+                                                    <select class="form-select" aria-label="Default select example" id="selectPedido">
                                                         <option selected>Todos</option>
                                                         <option value="1">Entregado</option>
                                                         <option value="2">En camino</option>
