--- a/vistas/privado/comentarios.html
+++ b/vistas/privado/comentarios.html
@@ -33,7 +33,6 @@
             </div>
             <div class="container"> <!--div contenedor del texto de comentarios y linea-->
                 <div class="contenidoP">
-                    
                     <div class="nav-link rectanguloP z-0" id="rectanguloP">
                         <div class="col-lg-12 col-md-11 d-flex justify-content-end mt-4 me-3">
                             <div class="custom-select  me-5">
@@ -51,7 +50,7 @@
                 </div>
             </div>
             <!--PAGINA DE DETALLE COMENTARIO-->
-            <div class="nav-link rectanguloP1 z-0 d-flex flex-column d-none " id="rectanguloP1">
+            <div class="nav-link idComentario z-0 d-flex flex-column d-none " id="idComentario">
             </div>
         </div>
     </main>
