--- a/vistas/privado/pedidos.html
+++ b/vistas/privado/pedidos.html
@@ -65,9 +65,9 @@
                             <div class="row g-3">
                                 <div class="col-lg-12">
                                     <!-- Formulario de búsqueda -->
-                                    <form class="ms-2 col-lg-10 col-md-10 col mt-3 mb-4" id="searchForm">
+                                    <form class="ms-2 col-lg-12 col-md-10 col mt-3 mb-4" id="searchForm">
                                         <div class="row col-lg-12">
-                                                <div class="search-container me-5">
+                                                <div class="search-container">
                                                     <input type="search" class="form-control" name="search"
                                                         placeholder="Buscar....." id="buscadorInputRepartidor">
                                                     <span class="search-icon"><i class="bi bi-search"></i></span>
