Detalles usuario - Update de usuario 100% - falta 1 validacion en fechaN - Progreso Total 100%

--- a/vistas/privado/detalles_usuario.html
+++ b/vistas/privado/detalles_usuario.html
@@ -103,49 +103,43 @@
                 </div>
                 <!--Contenedor del formulario para cambiar-->
                 <div class="contenedorForm d-flex flex-column">
-                    <form class="row needs-validation form1 position-relative" novalidate >
+                    <form class="row needs-validation form1 position-relative" id="infoForm" >
                         <!--Formulario de nombre-->
                         <div class="col-md-6">
-                            <label for="nombreInput" class="form-label">Nombres</label>
-                            <input type="text" class="form-control" id="nombreInput" required readonly>
+                            <label for="nombreInputTrabajador" class="form-label">Nombres</label>
+                            <input type="text" class="form-control" id="nombreInputTrabajador" name="nombreInputTrabajador"
+                            required readonly>
                         </div>
                         <!--Formulario de apellido-->
                         <div class="col-md-6">
-                            <label for="apellidosInput" class="form-label ">Apellidos</label>
-                            <input type="text" class="form-control" id="apellidosInput" required readonly>
+                            <label for="apellidosInputTrabajador" class="form-label ">Apellidos</label>
+                            <input type="text" class="form-control" id="apellidosInputTrabajador" name="apellidosInputTrabajador"
+                            required readonly>
                         </div>
                         <!--Formulario de DUI-->
                         <div class="col-md-6 mt-3">
-                            <label for="duiInput" class="form-label ">DUI</label>
-                            <input type="text" class="form-control" id="duiInput" required readonly>
+                            <label for="duiInputTrabajador" class="form-label ">DUI</label>
+                            <input type="text" class="form-control" id="duiInputTrabajador" name="duiInputTrabajador"
+                            required readonly>
                         </div>
                         <!--Formulario de telefono-->
                         <div class="col-md-6 mt-3">
-                            <label for="telefonoInput" class="form-label ">Teléfono</label>
-                            <input type="text" class="form-control" id="telefonoInput" required readonly>
+                            <label for="telefonoInputTrabajador" class="form-label ">Teléfono</label>
+                            <input type="text" class="form-control" id="telefonoInputTrabajador" name="telefonoInputTrabajador"
+                            required readonly>
                         </div>
                         <!--Formulario de correo electronico-->
                         <div class="col-md-6 mt-3">
-                            <label for="correoInput" class="form-label ">Correo Electrónico</label>
-                            <input type="text" class="form-control" id="correoInput" required readonly>
+                            <label for="correoInputTrabajador" class="form-label ">Correo Electrónico</label>
+                            <input type="text" class="form-control" id="correoInputTrabajador" name="correoInputTrabajador"
+                            required readonly>
                         </div>
                         <!--Formulario de fecha de nacimento-->
                         <div class="col-md-6 mt-3">
-                            <label for="fechanInput" class="form-label ">Fecha de Nacimiento</label>
-                            <input type="date" class="form-control" id="fechanInput" required readonly>
+                            <label for="fechanInputTrabajador" class="form-label ">Fecha de Nacimiento</label>
+                            <input type="date" class="form-control" id="fechanInputTrabajador" name="fechanInputTrabajador"
+                            required readonly>
                         </div>
-                        <!--Formulario de contraseña
-                        <div class="col-md-6 mt-3">
-                            <label for="contraInput" class="form-label ">Contraseña</label>
-                            <input type="password" class="form-control" id="contraInput" required readonly
-                                value="**********">
-                        </div>
-                        Formulario de confirmar contraseña
-                        <div class="col-md-6 mt-3">
-                            <label for="contraCInput" class="form-label ">Confirmar Contraseña</label>
-                            <input type="password" class="form-control" id="contraCInput" required readonly
-                                value="**********">
-                        </div>-->
                         <!--contenedores de los botones-->
                         <div class="contenedorBotones2 d-flex flex-wrap row-gap-3 p-0">
                             <!--boton de regresar-->
