--- a/vistas/privado/comentarios.html
+++ b/vistas/privado/comentarios.html
@@ -50,8 +50,7 @@
                 </div>
             </div>
             <!--PAGINA DE DETALLE COMENTARIO-->
-            <div class="nav-link idComentario z-0 d-flex flex-column d-none " id="idComentario">
-                
+            <div class="nav-link idComentario z-0 d-flex flex-column " id="idComentario">
             </div>
         </div>
     </main>
