Avance en retirar comentarios y creacion de archivos para Zapatos

--- a/vistas/privado/zapatos.html
+++ b/vistas/privado/zapatos.html
@@ -38,7 +38,7 @@
                         <!--Boton para los zapatos registrados-->
                         <button class="nav-link boton-cambiar-color" data-bs-toggle="tab" id="registrados-tab"
                             type="button" data-bs-target="#registrados" role="tab" aria-controls="registrados"
-                            aria-selected="true" onclick="showpatos(this)">
+                            aria-selected="true" onclick="showZapatos(this)">
                             Registrados
                         </button>
                     </li>
@@ -67,38 +67,6 @@
                         <div id="slider-container">
                             <span onclick="slideRight()" class="btn"></span>
                             <div id="slider">
-                                <div class="slide">
-                                    <img src="../../recursos/imagenes/airJordan1.svg" alt="Descripción de la imagen">
-                                    <span>Nike Dunk Low</span>
-                                </div>
-                                <div class="slide">
-                                    <img src="../../recursos/imagenes/airJordan1.svg" alt="Descripción de la imagen">
-                                    <span>Nike Dunk Low</span>
-                                </div>
-                                <div class="slide">
-                                    <img src="../../recursos/imagenes/airJordan1.svg" alt="Descripción de la imagen">
-                                    <span>Nike Dunk Low</span>
-                                </div>
-                                <div class="slide">
-                                    <img src="../../recursos/imagenes/airJordan1.svg" alt="Descripción de la imagen">
-                                    <span>Nike Dunk Low</span>
-                                </div>
-                                <div class="slide">
-                                    <img src="../../recursos/imagenes/airJordan1.svg" alt="Descripción de la imagen">
-                                    <span>Nike Dunk Low</span>
-                                </div>
-                                <div class="slide">
-                                    <img src="../../recursos/imagenes/airJordan1.svg" alt="Descripción de la imagen">
-                                    <span>Nike Dunk Low</span>
-                                </div>
-                                <div class="slide">
-                                    <img src="../../recursos/imagenes/airJordan1.svg" alt="Descripción de la imagen">
-                                    <span>Nike Dunk Low</span>
-                                </div>
-                                <div class="slide">
-                                    <img src="../../recursos/imagenes/airJordan1.svg" alt="Descripción de la imagen">
-                                    <span>Nike Dunk Low</span>
-                            </div>
                         </div>
                         <span onclick="slideLeft()" class="btn"></span>
                     </div>
