--- a/vistas/privado/comentarios.html
+++ b/vistas/privado/comentarios.html
@@ -36,7 +36,7 @@
                     <div class="nav-link rectanguloP z-0" id="rectanguloP">
                         <div class="col-lg-12 col-md-11 d-flex justify-content-end mt-4 me-3">
                             <div class="custom-select  me-5">
-                                <select class="form-select" aria-label="Default select example">
+                                <select class="form-select" aria-label="Default select example" id="cmbxEstado">
                                     <option selected>Todos</option>
                                     <option value="1">Activos</option>
                                     <option value="2">Desactivados</option>
