--- a/vistas/privado/zapatos.html
+++ b/vistas/privado/zapatos.html
@@ -248,7 +248,7 @@
                                     <h1 class="modal-title fs-5 text-center" id="modalTitle"></h1>
                                 </div>
                                 <!-- Formulario para crear o actualizar un registro -->
-                                <form id="updateFrom" name="updateFrom">
+                                <form id="updateFromColor" name="updateFromColor">
                                     <div class="modal-body row g-3 d-flex flex-column align-items-center">
                                         <!-- Campo de nombres -->
                                         <div class="col-sm-6 col-md-6">
@@ -267,9 +267,9 @@
                                                     Cancelar
                                                 </button>
                                                 <!-- Botón para actualizar el registro -->
-                                                <button type="button" id="actualizarBtn"
+                                                <button type="button" id="actualizarBtnColor"
                                                     class="btn btn3 btn-primary ms-4 shadow text18 titillium-web-regular"
-                                                    onclick="botonActualizar()">
+                                                    onclick="botonActualizarColor()">
                                                     Actualizar
                                                 </button>
                                             </div>
