--- a/vistas/privado/zapatos.html
+++ b/vistas/privado/zapatos.html
@@ -261,9 +261,9 @@
                                         <div class="modal-footer mt-5 d-flex justify-content-center align-items-center">
                                             <div class="contenedorBotones3">
                                                 <!-- Botón para cancelar la operación -->
-                                                <button type="button" id="cancelarBtn"
+                                                <button type="button" id="cancelarBtnColor"
                                                     class="btn btn2 btn-primary ms-4 shadow text18 titillium-web-regular"
-                                                    onclick="botonCancelar()">
+                                                    onclick="botonCancelarColor()">
                                                     Cancelar
                                                 </button>
                                                 <!-- Botón para actualizar el registro -->
