Cambios de Zapatos

--- a/vistas/privado/zapatos.html
+++ b/vistas/privado/zapatos.html
@@ -177,17 +177,15 @@
                                     <div class="modal-body row g-3 d-flex flex-column align-items-center">
                                         <!-- Campo de nombres -->
                                         <div class="col-sm-6 col-md-6">
+                                            <label for="addTalla" class="form-label">Ingresa la talla</label>
                                             <select class="form-select" aria-label="Default select example" id="idTalla"
                                                 name="idTalla">
-                                                <option selected>Selecciona la talla</option>
-                                                <option value="1">Prueba</option>
                                             </select>
                                         </div>
                                         <div class="col-sm-6 col-md-6">
+                                            <label for="addTalla" class="form-label">Ingresa un color</label>
                                             <select class="form-select" aria-label="Default select example" id="Color"
                                                 name="Color">
-                                                <option selected>Selecciona el color</option>
-                                                <option value="1">Prueba</option>
                                             </select>
                                         </div>
                                         <div class="col-sm-6 col-md-6 mb-3">
@@ -220,7 +218,7 @@
                                                 <!-- Botón para cancelar la operación -->
                                                 <button type="button" id="cancelarBtn"
                                                     class="btn btn2 btn-primary ms-4 shadow text18 titillium-web-regular"
-                                                    onclick="botonCancelar()">
+                                                    onclick="botonCancelarDetalle()">
                                                     Cancelar
                                                 </button>
                                                 <!-- Botón para actualizar el registro -->
