Cambios de Zapatos

--- a/vistas/privado/zapatos.html
+++ b/vistas/privado/zapatos.html
@@ -367,6 +367,11 @@
                                                     onclick="botonActualizarTalla()">
                                                     Actualizar
                                                 </button>
+                                                <button type="button" id="eliminarBtnTalla"
+                                                    class="btn btn3 btn-primary ms-4 shadow text18 titillium-web-regular"
+                                                    onclick="eliminarTalla()">
+                                                    Eliminar
+                                                </button>
                                             </div>
                                         </div>
                                     </div>
